wip
- add/delete role to group
- add/delete endpoint to group
